# KIT-BIG-DATA

./: .gitattributes  .gitignore  README.md  Test.py  analyse_premier_axe.py  analysis_seasonality.py  app.py  coverage.xml  genindex.html  index.html  installation.html  logger.py  py-modindex.html  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties  top_50_analysis.py  tox.ini  usage.html
.coverage-reports/: coverage-20241117.xml
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  sonarcloud.yml
_sources/: usage.rst.txt
coverage-reports/: coverage-20241117_1.xml  coverage-20241117_2.xml
data/: README.md  lien-data.txt
docs/: index.html  installation.html  objects.inv  searchindex.js  template_file.py  usage.html
docs/.doctrees/: environment.pickle  installation.doctree  modules.doctree  usage.doctree
docs/00_sujet_template/: template_file.py
docs/01_EDA/: DQM.ipynb  analyse_deuxieme_axe.py  analyse_premier_axe.py  analysis_temporelle.ipynb  readme.md
docs/_sources/: modules.rst.txt
docs/html/: .buildinfo  genindex.html  modules.html  py-modindex.html  searchindex.js
docs/source/: conf.py  index.rst  usage.rst
doctrees/: environment.pickle  modules.doctree
html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv
html/_sources/: installation.rst.txt
logs/: log.txt
outputs/: config.yaml
source/: conf.py  index.rst  installation.rst  modules.rst  usage.rst
src/optimRecipes/: __init__.py  analyse_deuxieme_axe.py  analyse_premier_axe.py  analysis_most_common_words.py  analysis_seasonality.py  analysis_temporelle.py  analysis_top_15.py  analysis_weekly.py  app.py  config.py  constants.py  dataLoader.py  functions.py  logger.py  main.py  most_common_words.py  test_analysis.py  test_top_recipes.py  top_50_analysis.py
tests/: test_common_words_analysis.py  test_config.py  test_data_extractor.py  test_logger.py  test_seasonality_analysis.py  test_test.py  test_top_recipes.py  test_top_recipes_analysis.py  test_weekly_analysis.py
