[build-system]
# requires = ["setuptools"]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.dynamic]
version = {attr = "optimRecipes.__version__"}
# readme = {file = ["README.txt", "USAGE.txt"], content-type = "text/plain"} #If content-type is not given, "text/x-rst" is used by default.
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default

[project]
name = "optimRecipes"
authors = [
    {name = "Zeina Gebran", email = "zeina.gebran@telecom-paris.fr"},
    {name = "Habibata Samake", email = "habibata.samake@telecom-paris.fr"},
    {name = "Nicolas Allègre", email = "nicolas.allegre@telecom-paris.fr"},
    {name = "Matthieu Larnouhet", email = "matthieu.larnouhet@telecom-paris.fr"},
]
# maintainers = [
#     {name = "...", email = "..."}
# ]
description = "Projet Big Data Recipes and Interactions." # single ligne
readme = {file = "README.md"}
license = {text = "EUPL 1.2"}
classifiers = [ #for pypi
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
]
keywords = ["IA", "data", "webapp"]
requires-python = "^3.12"
# dependencies = [
#     "requests",',
# ]
dynamic = ["version", "dependencies"]


[tool.poetry]
name = "projet kit big data"
version = "0.6.0"
description = "Projet Big Data Recipes and Interactions."
authors = [
    "Zeina Gebran <zeina.gebran@telecom-paris.fr>",
    "Habibata Samake <habibata.samake@telecom-paris.fr>",
    "Nicolas Allègre <nicolas.allegre@telecom-paris.fr>",
    "Matthieu Larnouhet <matthieu.larnouhet@telecom-paris.fr>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38"
pandas = "*"
numpy = "*"
seaborn = "*"
nltk = "*"
wordcloud = "*"
pyrallis = "*"
loguru = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Tools for quality of code :
pycodestyle = "*"
pydocstyle = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pylama = {version="*", extras=["all"]}
autopep8 = "*"
# Tools for testing :
pytest = "*"
pytest-mock = "*"
coverage = "*"
# Tools for building documentation :
sphinx = "*"
sphinx-rtd-theme = "*"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
